--- a/app/src/main/res/layout/image.xml
+++ b/app/src/main/res/layout/image.xml
@@ -15,8 +15,9 @@
         android:layout_width="wrap_content"
         android:id="@+id/fab_setwall"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:layout_alignBottom="@+id/imageView"
+        android:background="@mipmap/fab_blu"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="74dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp" />
 </RelativeLayout>
