--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,17 +4,19 @@
     android:layout_marginTop="40dp"
     android:layout_height="match_parent">
 
+
     <GridView
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:id="@+id/list"
         android:layout_alignParentLeft="true"
-    android:layout_height="match_parent"
-    tools:showIn="@layout/activity_main"
-    android:numColumns="2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:gravity="center"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="0dp"
+        android:horizontalSpacing="0dp"
+        android:layout_height="match_parent"
+        android:numColumns="2"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true">
 
 </GridView>
 </RelativeLayout>
